# granular_gas

./: .gitignore  Cargo.toml
data/: task_1_energy.csv  task_1_final_energy.csv  task_1_final_particles.csv  task_1_final_speeds.csv  task_1_initial_energy.csv  task_1_initial_particles.csv  task_1_initial_speeds.csv  task_1_particles.csv  task_1_speeds.csv  task_2_diff_r_energy.csv  task_2_diff_r_particles.csv  task_2_diff_r_speeds.csv  task_2_energy.csv  task_2_particles.csv  task_2_speeds.csv  task_3_0.8_energy.csv  task_3_0.8_particles.csv  task_3_0.8_speeds.csv  task_3_0.9_energy.csv  task_3_0.9_particles.csv  task_3_0.9_speeds.csv  task_3_1_energy.csv  task_3_1_particles.csv  task_3_1_speeds.csv  task_4_crater_size.csv  task_4_final_ 0_energy.csv  task_4_final_ 0_particles.csv  task_4_final_ 0_speeds.csv  task_4_final_-0.5_crater_size.csv  task_4_final_-0.5_energy.csv  task_4_final_-0.5_particles.csv  task_4_final_-0.5_speeds.csv  task_4_final_-1_crater_size.csv  task_4_final_-1_energy.csv  task_4_final_-1_particles.csv  task_4_final_-1_speeds.csv  task_4_final_0.00_energy.csv  task_4_final_0.00_particles.csv  task_4_final_0.00_speeds.csv  task_4_final_0.1_energy.csv  (+36 more)
report/: main.tex  task_1.tex  task_2.tex  task_3.tex  task_4.tex
src/: collisions.rs  main.rs  parameters.rs  particle.rs  plotting.rs  save_data.rs  simulation.rs  tasks.rs  tests.rs
