[package]
name = "granular_gas"
version = "0.1.0"
authors = ["jonasbue <jonas.bueie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-rand = "0.13.0"
gnuplot = "0.0.37"
csv = "1.1.5"
ndarray-csv = "0.5.0"
